[gd_scene load_steps=3 format=2]

[ext_resource path="res://UI/RulesContainer.gd" type="Script" id=1]
[ext_resource path="res://UI/MainUITheme.tres" type="Theme" id=2]

[node name="RulesContainer" type="Panel"]
margin_right = 360.0
margin_bottom = 296.0
rect_min_size = Vector2( 360, 296 )
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="ControlsRoot" type="Control" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 353.0
margin_bottom = 289.0

[node name="Header" type="Label" parent="ControlsRoot"]
margin_left = 9.0
margin_top = 16.0
margin_right = 297.0
margin_bottom = 32.0
text = "HOW TO PLAY"

[node name="Page01" type="MarginContainer" parent="ControlsRoot"]
margin_left = -7.0
margin_top = 32.0
margin_right = 353.0
margin_bottom = 296.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="ControlsRoot/Page01"]
margin_left = 16.0
margin_top = 16.0
margin_right = 344.0
margin_bottom = 248.0
custom_constants/separation = 12

[node name="Label" type="Label" parent="ControlsRoot/Page01/VBoxContainer"]
margin_right = 328.0
margin_bottom = 35.0
text = "Events will happen randomly as you travel through the universe in search of the wormhole."
autowrap = true

[node name="Label2" type="Label" parent="ControlsRoot/Page01/VBoxContainer"]
margin_top = 47.0
margin_right = 328.0
margin_bottom = 82.0
text = "Some events may give great rewards. Others may be
dangerous to encounter."
autowrap = true

[node name="Label3" type="Label" parent="ControlsRoot/Page01/VBoxContainer"]
margin_top = 94.0
margin_right = 328.0
margin_bottom = 129.0
text = "You may find messages left behind by other travelers in certain events and locations."
autowrap = true

[node name="Page02" type="MarginContainer" parent="ControlsRoot"]
visible = false
margin_left = -7.0
margin_top = 32.0
margin_right = 353.0
margin_bottom = 296.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="ControlsRoot/Page02"]
margin_left = 16.0
margin_top = 16.0
margin_right = 344.0
margin_bottom = 248.0
custom_constants/separation = 12

[node name="Label2" type="Label" parent="ControlsRoot/Page02/VBoxContainer"]
margin_right = 328.0
margin_bottom = 16.0
text = "There are 3 types of events."
autowrap = true

[node name="Label5" type="RichTextLabel" parent="ControlsRoot/Page02/VBoxContainer"]
margin_top = 28.0
margin_right = 328.0
margin_bottom = 62.0
bbcode_enabled = true
bbcode_text = "[color=yellow]Resource Gathering[/color]: Destroy asteroids, debris, and other objects to gather resources."
text = "Resource Gathering: Destroy asteroids, debris, and other objects to gather resources."
fit_content_height = true

[node name="Label6" type="RichTextLabel" parent="ControlsRoot/Page02/VBoxContainer"]
margin_top = 74.0
margin_right = 328.0
margin_bottom = 108.0
bbcode_enabled = true
bbcode_text = "[color=red]Battle[/color]: Defeat all enemies to move on, or escape at the cost of fuel."
text = "Battle: Defeat all enemies to move on, or escape at the cost of fuel."
fit_content_height = true

[node name="Label7" type="RichTextLabel" parent="ControlsRoot/Page02/VBoxContainer"]
margin_top = 120.0
margin_right = 328.0
margin_bottom = 171.0
bbcode_enabled = true
bbcode_text = "[color=#22ddff]Story[/color]: Random encounters with various types of scenarios where you must pick a choice on what to do."
text = "Story: Random encounters with various types of scenarios where you must pick a choice on what to do."
fit_content_height = true

[node name="NextButton" type="Button" parent="ControlsRoot"]
margin_left = 297.0
margin_top = 257.0
margin_right = 338.0
margin_bottom = 279.0
text = "NEXT"

[node name="BackButton" type="Button" parent="ControlsRoot"]
margin_left = 9.0
margin_top = 257.0
margin_right = 50.0
margin_bottom = 279.0
text = "PREV"

[node name="PageNumber" type="Label" parent="ControlsRoot"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -25.0
margin_right = 20.0
margin_bottom = -1.0
text = "1/2"
align = 1
valign = 1

[connection signal="pressed" from="ControlsRoot/NextButton" to="." method="_on_NextButton_pressed"]
[connection signal="pressed" from="ControlsRoot/BackButton" to="." method="_on_BackButton_pressed"]
